--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,15 @@
-*.gem
-*.rbc
-.bundle
-.config
-coverage
-InstalledFiles
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp/
-.yardoc
-*~
-_yardoc
-doc/
-Gemfile.lock
-berkshelf
-Berksfile.lock
-.rake_test_cache
 .vagrant
-.idea
-metadata.json
+*~
+*#
+.#*
+\#*#
+.*.sw[a-z]
+*.un~
+/cookbooks
+
+# Bundler
+bin/*
+.bundle/*
+
 .kitchen/
 .kitchen.local.yml
