--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,7 +4,7 @@ driver:
   customize:
     memory: 1024
   network:
-  - ["forwarded_port", {guest: 4440, host: 4441}]
+  - ["forwarded_port", {guest: 4440, host: 4440}]
 
 provisioner:
   name: chef_solo
@@ -13,6 +13,7 @@ platforms:
   - name: ubuntu-12.04
     run_list:
     - recipe[apt]
+  - name: centos-6.5
 
 suites:
 - name: default
