Working JAR launcher installation.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -23,3 +23,7 @@ suites:
   run_list:
   - recipe[rundeck]
   - recipe[rundeck_test::simple]
+- name: jar
+  run_list:
+  - recipe[rundeck_test::jar]
+  - recipe[rundeck_test::simple]
