--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -8,6 +8,9 @@ driver:
 
 provisioner:
   name: chef_solo
+  attributes:
+    rundeck:
+      admin_password: admin # Useful for manual checking sometimes
 
 platforms:
   - name: ubuntu-12.04
